--- a/docker-compose/prod/common-config.yml
+++ b/docker-compose/prod/common-config.yml
@@ -10,14 +10,17 @@ services:
       resources:
         limits:
           memory: 700m
-  #    environment:
-  #      SPRING_RABBITMQ_HOST: "rabbit"
+    environment:
+      SPRING_RABBITMQ_HOST: "rabbit"
+      SPRING_RABBITMQ_PORT: 5672
+      SPRING_RABBITMQ_USERNAME: guest
+      SPRING_RABBITMQ_PASSWORD: guest
 
   microservice-configserver-config:
     extends:
       service: microservice-base-config
     environment:
-      SPRING_PROFILES_ACTIVE: default
+      SPRING_PROFILES_ACTIVE: prod
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
 
   microservice-eureka-config:
