--- a/docker-compose/default/common-config.yml
+++ b/docker-compose/default/common-config.yml
@@ -10,8 +10,11 @@ services:
       resources:
         limits:
           memory: 700m
-  #    environment:
-  #      SPRING_RABBITMQ_HOST: "rabbit"
+    environment:
+      SPRING_RABBITMQ_HOST: "rabbit"
+      SPRING_RABBITMQ_PORT: 5672
+      SPRING_RABBITMQ_USERNAME: guest
+      SPRING_RABBITMQ_PASSWORD: guest
 
   microservice-configserver-config:
     extends:
