--- a/docker-compose/h2DB/docker-compose.yml
+++ b/docker-compose/h2DB/docker-compose.yml
@@ -13,13 +13,13 @@ services:
 
   read:
     image: grafana/loki:3.1.2
-    command: "-config.file=/etc/loki/config.yaml -target=read"
+    command: "-config.file=/etc/loki/loki-config.yaml -target=read"
     ports:
       - "3101:3100"
       - "7946"
       - "9095"
     volumes:
-      - ../observability/loki/loki-config.yaml:/etc/loki/config.yaml
+      - ../observability/loki/loki-config.yaml:/etc/loki/loki-config.yaml
     depends_on:
       - minio
     healthcheck:
@@ -32,15 +32,16 @@ services:
         aliases:
           - loki
 
+
   write:
     image: grafana/loki:3.1.2
-    command: "-config.file=/etc/loki/config.yaml -target=write"
+    command: "-config.file=/etc/loki/loki-config.yaml -target=write"
     ports:
       - "3102:3100"
       - "7946"
       - "9095"
     volumes:
-      - ../observability/loki/loki-config.yaml:/etc/loki/config.yaml
+      - ../observability/loki/loki-config.yaml:/etc/loki/loki-config.yaml
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
       interval: 20s
@@ -51,12 +52,13 @@ services:
     networks:
       <<: *loki-dns
 
+
   alloy:
     image: grafana/alloy:v1.5.1
     volumes:
-      - ../observability/alloy/alloy-local-config.yaml:/etc/alloy/config.alloy:ro
+      - ../observability/alloy/alloy-local-config.yaml:/etc/alloy/alloy-local-config.yaml:ro
       - /var/run/docker.sock:/var/run/docker.sock
-    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
+    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/alloy-local-config.yaml
     ports:
       - "12345:12345"
     depends_on:
@@ -64,6 +66,7 @@ services:
     extends:
       file: common-config.yml
       service: network-deploy-service
+
 
   minio:
     image: minio/minio:RELEASE.2024-12-18T13-15-44Z
@@ -82,12 +85,12 @@ services:
     ports:
       - "9000"
     volumes:
-      - ./.data/minio:/data
+      - minio-data:/data
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
       interval: 25s
       timeout: 20s
-      retries: 20
+      retries: 10
     extends:
       file: common-config.yml
       service: network-deploy-service
@@ -104,11 +107,22 @@ services:
       - sh
       - -euc
       - |
+        mkdir -p /etc/grafana/provisioning/datasources
+        cat > /etc/grafana/provisioning/datasources/ds.yaml << 'EOF'
+        apiVersion: 1
+        datasources:
+          - name: Loki
+            type: loki
+            access: proxy
+            url: http://gateway:3100
+            jsonData:
+              httpHeaderName1: "X-Scope-OrgID"
+            secureJsonData:
+              httpHeaderValue1: "tenant1"
+        EOF
         /run.sh
     ports:
       - "3000:3000"
-    volumes:
-      - ../observability/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1" ]
       interval: 20s
