--- a/docker-compose/observability/loki/loki-config.yaml
+++ b/docker-compose/observability/loki/loki-config.yaml
@@ -1,23 +1,30 @@
+---
 server:
+  http_listen_address: 0.0.0.0
   http_listen_port: 3100
 
 memberlist:
-  join_members:
-    - loki:7946
+  join_members: ["read", "write", "backend"]
+  dead_node_reclaim_time: 30s
+  gossip_to_dead_nodes_time: 15s
+  left_ingesters_timeout: 30s
+  bind_addr: ['0.0.0.0']
+  bind_port: 7946
+  gossip_interval: 2s
 
 schema_config:
   configs:
-    - from: 2025-06-20
-      store: boltdb-shipper
+    - from: 2023-01-01
+      store: tsdb
       object_store: s3
-      schema: v11
+      schema: v13
       index:
         prefix: index_
         period: 24h
-
 common:
   path_prefix: /loki
   replication_factor: 1
+  compactor_address: http://backend:3100
   storage:
     s3:
       endpoint: minio:9000
@@ -29,13 +36,10 @@ common:
   ring:
     kvstore:
       store: memberlist
-
 ruler:
   storage:
     s3:
       bucketnames: loki-ruler
-      endpoint: minio:9000
-      access_key_id: loki
-      secret_access_key: supersecret
-      insecure: true
-      s3forcepathstyle: true
+
+compactor:
+  working_directory: /tmp/compactor
