--- a/docker-compose/h2DB/docker-compose.yml
+++ b/docker-compose/h2DB/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   read:
     image: grafana/loki:3.1.2
-    command: "-config.file=/etc/loki/loki-config.yaml -target=read"
+    command: "-config.file=/etc/loki/loki-config.yaml -target=read,query-frontend,query-scheduler"
     ports:
       - "3101:3100"
       - "7946"
@@ -32,23 +32,41 @@ services:
         aliases:
           - loki
 
-
+    # Loki Write Component (Ingester + Distributor)
   write:
     image: grafana/loki:3.1.2
     command: "-config.file=/etc/loki/loki-config.yaml -target=write"
     ports:
       - "3102:3100"
       - "7946"
-      - "9095"
     volumes:
       - ../observability/loki/loki-config.yaml:/etc/loki/loki-config.yaml
+    depends_on:
+      - minio
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
       interval: 20s
       timeout: 5s
       retries: 20
+    networks:
+      <<: *loki-dns
+
+    # Backend Component (Compactor + Ruler + Index Gateway)
+  backend:
+    image: grafana/loki:3.1.2
+    command: "-config.file=/etc/loki/loki-config.yaml -target=backend"
+    ports:
+      - "3103:3100"
+      - "7946"
+    volumes:
+      - ../observability/loki/loki-config.yaml:/etc/loki/loki-config.yaml
     depends_on:
       - minio
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
+      interval: 20s
+      timeout: 5s
+      retries: 20
     networks:
       <<: *loki-dns
 
