--- a/docker-compose/observability/loki/loki-config.yaml
+++ b/docker-compose/observability/loki/loki-config.yaml
@@ -1,8 +1,13 @@
----
 server:
   http_listen_address: 0.0.0.0
   http_listen_port: 3100
+  grpc_listen_address: 0.0.0.0
+  grpc_listen_port: 9095
 
+# Disable multi-tenancy
+auth_enabled: false
+
+# Memberlist configuration for service discovery
 memberlist:
   join_members: ["read", "write", "backend"]
   dead_node_reclaim_time: 30s
@@ -12,6 +17,7 @@ memberlist:
   bind_port: 7946
   gossip_interval: 2s
 
+# Schema configuration
 schema_config:
   configs:
     - from: 2023-01-01
@@ -21,6 +27,8 @@ schema_config:
       index:
         prefix: index_
         period: 24h
+
+# Common configuration
 common:
   path_prefix: /loki
   replication_factor: 1
@@ -36,10 +44,88 @@ common:
   ring:
     kvstore:
       store: memberlist
+
+# Query scheduler configuration
+query_scheduler:
+  grpc_client_config:
+    max_send_msg_size: 104857600
+
+# Query frontend configuration
+frontend:
+  compress_responses: true
+  max_outstanding_per_tenant: 2048
+  scheduler_worker_concurrency: 5
+
+# Querier configuration
+querier:
+  max_concurrent: 4
+  query_ingesters_within: 3h
+
+# Distributor configuration
+distributor:
+  ring:
+    kvstore:
+      store: memberlist
+
+# Ingester configuration
+ingester:
+  lifecycler:
+    address: 0.0.0.0
+    ring:
+      kvstore:
+        store: memberlist
+      replication_factor: 1
+    final_sleep: 0s
+  chunk_encoding: snappy
+  chunk_idle_period: 5m
+  chunk_retain_period: 30s
+  wal:
+    dir: /loki/wal
+
+# Ruler configuration
 ruler:
   storage:
+    type: s3
     s3:
       bucketnames: loki-ruler
+      endpoint: minio:9000
+      access_key_id: loki
+      secret_access_key: supersecret
+      insecure: true
+      s3forcepathstyle: true
+  rule_path: /tmp/loki/rules-temp
+  ring:
+    kvstore:
+      store: memberlist
+  enable_api: true
 
+# Compactor configuration
 compactor:
   working_directory: /tmp/compactor
+  retention_enabled: true
+  delete_request_store: s3
+
+# Index gateway configuration
+index_gateway:
+  mode: ring
+  ring:
+    kvstore:
+      store: memberlist
+
+# Storage configuration
+storage_config:
+  tsdb_shipper:
+    active_index_directory: /loki/tsdb-index
+    cache_location: /loki/tsdb-cache
+
+# Limits configuration
+limits_config:
+  reject_old_samples: true
+  reject_old_samples_max_age: 168h
+  ingestion_rate_mb: 16
+  ingestion_burst_size_mb: 32
+  per_stream_rate_limit: 3MB
+  per_stream_rate_limit_burst: 15MB
+  max_cache_freshness_per_query: 10m
+  split_queries_by_interval: 24h
+  max_query_parallelism: 32
