--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -1,4 +1,15 @@
 services:
+  #  redis:
+  #    image: redis
+  #    ports:
+  #      - "6379:6379"
+  #    healthcheck:
+  #      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+  #      timeout: 10s
+  #      retries: 10
+  #    extends:
+  #      file: common-config.yml
+  #      service: network-deploy-service
 
   rabbit:
     image: rabbitmq:3-management
