ADD: security filter chain and custom roleconveter

--- a/gatewayserver/src/main/resources/application.yml
+++ b/gatewayserver/src/main/resources/application.yml
@@ -24,11 +24,11 @@ spring:
       port: 6379
       timeout: 1s
 
-    security:
-      oauth2:
-        resourceserver:
-          jwt:
-            jwt-set-uri: "http://localhost:7080/realms/master/protocol/openid-connect/certs"
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: "http://localhost:7080/realms/master/protocol/openid-connect/certs"
 
 management:
   endpoints:
