--- a/docker-compose/h2DB/docker-compose.yml
+++ b/docker-compose/h2DB/docker-compose.yml
@@ -26,11 +26,11 @@ services:
 
   read:
     image: grafana/loki:3.1.2
-    command: "-config.file=/etc/loki/loki-config.yaml -target=read,query-frontend,query-scheduler"
+    command: "-config.file=/etc/loki/loki-config.yaml -target=read"
     ports:
       - "3101:3100"
-      - "7946"
-      - "9095"
+      - "9095:9095"  # gRPC port
+      - "7946"       # memberlist port
     volumes:
       - ../observability/loki/loki-config.yaml:/etc/loki/loki-config.yaml
     depends_on:
@@ -40,18 +40,57 @@ services:
       interval: 20s
       timeout: 5s
       retries: 20
+      start_period: 30s
     networks: &loki-dns
       my-banking-application:
         aliases:
           - loki
 
-    # Loki Write Component (Ingester + Distributor)
+  query-frontend:
+    image: grafana/loki:3.1.2
+    command: "-config.file=/etc/loki/loki-config.yaml -target=query-frontend"
+    ports:
+      - "3104:3100"
+      - "9096:9095"  # gRPC port
+    volumes:
+      - ../observability/loki/loki-config.yaml:/etc/loki/loki-config.yaml
+    depends_on:
+      - minio
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
+      interval: 20s
+      timeout: 5s
+      retries: 20
+      start_period: 30s
+    networks:
+      <<: *loki-dns
+
+  query-scheduler:
+    image: grafana/loki:3.1.2
+    command: "-config.file=/etc/loki/loki-config.yaml -target=query-scheduler"
+    ports:
+      - "3105:3100"
+      - "9097:9095"  # gRPC port
+    volumes:
+      - ../observability/loki/loki-config.yaml:/etc/loki/loki-config.yaml
+    depends_on:
+      - minio
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
+      interval: 20s
+      timeout: 5s
+      retries: 20
+      start_period: 30s
+    networks:
+      <<: *loki-dns
+
   write:
     image: grafana/loki:3.1.2
     command: "-config.file=/etc/loki/loki-config.yaml -target=write"
     ports:
       - "3102:3100"
-      - "7946"
+      - "9098:9095"  # gRPC port
+      - "7946"       # memberlist port
     volumes:
       - ../observability/loki/loki-config.yaml:/etc/loki/loki-config.yaml
     depends_on:
@@ -61,16 +100,17 @@ services:
       interval: 20s
       timeout: 5s
       retries: 20
+      start_period: 30s
     networks:
       <<: *loki-dns
 
-    # Backend Component (Compactor + Ruler + Index Gateway)
   backend:
     image: grafana/loki:3.1.2
     command: "-config.file=/etc/loki/loki-config.yaml -target=backend"
     ports:
       - "3103:3100"
-      - "7946"
+      - "9099:9095"  # gRPC port
+      - "7946"       # memberlist port
     volumes:
       - ../observability/loki/loki-config.yaml:/etc/loki/loki-config.yaml
     depends_on:
@@ -80,14 +120,14 @@ services:
       interval: 20s
       timeout: 5s
       retries: 20
+      start_period: 30s
     networks:
       <<: *loki-dns
-
 
   alloy:
     image: grafana/alloy:v1.5.1
     volumes:
-      - ../observability/alloy/alloy-local-config.yaml:/etc/alloy/alloy-local-config.yaml:ro
+      - ./path/to/new/alloy-config.yaml:/etc/alloy/alloy-local-config.yaml:ro
       - /var/run/docker.sock:/var/run/docker.sock
     command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/alloy-local-config.yaml
     ports:
@@ -166,95 +206,155 @@ services:
   gateway:
     image: nginx:1.27.3
     depends_on:
-      - read
-      - write
+      read:
+        condition: service_healthy
+      query-frontend:
+        condition: service_healthy
+      write:
+        condition: service_healthy
+      backend:
+        condition: service_healthy
     entrypoint:
       - sh
       - -euc
       - |
-        cat <<EOF > /etc/nginx/nginx.conf
-        user  nginx;
-        worker_processes  5;
-        
+        echo "Waiting for services to be available..."
+        until nslookup read >/dev/null 2>&1; do
+          echo "Waiting for read service..."
+          sleep 2
+        done
+        until nslookup query-frontend >/dev/null 2>&1; do
+          echo "Waiting for query-frontend service..."
+          sleep 2
+        done
+        until nslookup write >/dev/null 2>&1; do
+          echo "Waiting for write service..."
+          sleep 2
+        done
+        echo "All services are resolvable, starting nginx..."
+
+        cat <<'EOF' > /etc/nginx/nginx.conf
+        user nginx;
+        worker_processes 5;
+        error_log /var/log/nginx/error.log debug;
+
         events {
-          worker_connections  1000;
+          worker_connections 1000;
         }
-        
+
         http {
-          resolver 127.0.0.11;
-        
-          # Add proxy timeout settings
-          proxy_connect_timeout       300s;
-          proxy_send_timeout          300s;
-          proxy_read_timeout          300s;
-          send_timeout                300s;
-        
+          resolver 127.0.0.11 valid=10s ipv6=off;
+          resolver_timeout 5s;
+          access_log /var/log/nginx/access.log;
+
+          upstream loki_read {
+            server read:3100 max_fails=3 fail_timeout=30s;
+            keepalive 32;
+          }
+
+          upstream loki_query_frontend {
+            server query-frontend:3100 max_fails=3 fail_timeout=30s;
+            keepalive 32;
+          }
+
+          upstream loki_write {
+            server write:3100 max_fails=3 fail_timeout=30s;
+            keepalive 32;
+          }
+
           server {
             listen 3100;
-        
-            location = / {
-              return 200 'OK';
-              auth_basic off;
+
+            location = /ready {
+              return 200 'ready\n';
+              add_header Content-Type text/plain;
             }
-        
-            location = /api/prom/push {
-              proxy_pass http://write:3100\$$request_uri;
-              # Add specific timeouts for write operations
-              proxy_connect_timeout 60s;
-              proxy_send_timeout 60s;
-              proxy_read_timeout 60s;
+
+            location = /health {
+              return 200 'healthy\n';
+              add_header Content-Type text/plain;
             }
-        
-            location = /api/prom/tail {
-              proxy_pass http://read:3100\$$request_uri;
-              proxy_set_header Upgrade "\$$http_upgrade";
-              proxy_set_header Connection "upgrade";
-              # Longer timeout for streaming
-              proxy_read_timeout 3600s;
-              proxy_send_timeout 3600s;
-            }
-        
-            location ~ /api/prom/.* {
-              proxy_pass http://read:3100\$$request_uri;
-              # Longer timeout for query operations
-              proxy_connect_timeout 300s;
-              proxy_send_timeout 300s;
-              proxy_read_timeout 300s;
-            }
-        
+
             location = /loki/api/v1/push {
-              proxy_pass http://write:3100\$$request_uri;
-              proxy_connect_timeout 60s;
+              proxy_pass http://loki_write;
+              proxy_set_header Host $$host;
+              proxy_set_header X-Real-IP $$remote_addr;
+              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_connect_timeout 30s;
               proxy_send_timeout 60s;
               proxy_read_timeout 60s;
+              proxy_buffering off;
             }
-        
-            location = /loki/api/v1/tail {
-              proxy_pass http://write:3100\$$request_uri;
-              proxy_set_header Upgrade "\$$http_upgrade";
-              proxy_set_header Connection "upgrade";
-              proxy_read_timeout 3600s;
-              proxy_send_timeout 3600s;
+
+            location = /api/prom/push {
+              proxy_pass http://loki_write;
+              proxy_set_header Host $$host;
+              proxy_set_header X-Real-IP $$remote_addr;
+              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_connect_timeout 30s;
+              proxy_send_timeout 60s;
+              proxy_read_timeout 60s;
+              proxy_buffering off;
             }
-        
-            location ~ /loki/api/.* {
-              proxy_pass http://read:3100\$$request_uri;
-              # This is crucial for query_range operations
-              proxy_connect_timeout 300s;
+
+            location ~ ^/loki/api/v1/(query|query_range|labels|label/.*/values|series) {
+              proxy_pass http://loki_query_frontend;
+              proxy_set_header Host $$host;
+              proxy_set_header X-Real-IP $$remote_addr;
+              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_connect_timeout 60s;
               proxy_send_timeout 300s;
               proxy_read_timeout 300s;
+              proxy_buffering off;
+            }
+
+            location ~ ^/api/prom/(query|query_range|labels|label/.*/values|series) {
+              proxy_pass http://loki_query_frontend;
+              proxy_set_header Host $$host;
+              proxy_set_header X-Real-IP $$remote_addr;
+              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_connect_timeout 60s;
+              proxy_send_timeout 300s;
+              proxy_read_timeout 300s;
+              proxy_buffering off;
+            }
+
+            location ~ ^/loki/api/v1/tail {
+              proxy_pass http://loki_read;
+              proxy_set_header Host $$host;
+              proxy_set_header X-Real-IP $$remote_addr;
+              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_set_header Upgrade $$http_upgrade;
+              proxy_set_header Connection "upgrade";
+              proxy_connect_timeout 60s;
+              proxy_send_timeout 3600s;
+              proxy_read_timeout 3600s;
+              proxy_buffering off;
+            }
+
+            location / {
+              proxy_pass http://loki_query_frontend;
+              proxy_set_header Host $$host;
+              proxy_set_header X-Real-IP $$remote_addr;
+              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_connect_timeout 60s;
+              proxy_send_timeout 300s;
+              proxy_read_timeout 300s;
+              proxy_buffering off;
             }
           }
         }
         EOF
+
         /docker-entrypoint.sh nginx -g "daemon off;"
     ports:
       - "3100:3100"
     healthcheck:
-      test: [ "CMD", "service", "nginx", "status" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:3100/ready" ]
       interval: 20s
       timeout: 5s
       retries: 20
+      start_period: 30s
     extends:
       file: common-config.yml
       service: network-deploy-service
