--- a/docker-compose/observability/loki/loki-config.yaml
+++ b/docker-compose/observability/loki/loki-config.yaml
@@ -5,6 +5,7 @@ server:
   http_listen_port: 3100
   grpc_listen_address: 0.0.0.0
   grpc_listen_port: 9095
+  log_level: info
 
 memberlist:
   join_members: [ "read", "write", "backend" ]
@@ -41,19 +42,35 @@ common:
     kvstore:
       store: memberlist
 
+# Query frontend configuration
+frontend:
+  scheduler_address: query-scheduler:9095
+  compress_responses: true
+  max_outstanding_per_tenant: 2048
+  log_queries_longer_than: 10s
+
+# Query scheduler configuration
 query_scheduler:
+  max_outstanding_requests_per_tenant: 2048
   grpc_client_config:
     max_send_msg_size: 104857600
 
-frontend:
-  compress_responses: true
-  max_outstanding_per_tenant: 2048
-  scheduler_worker_concurrency: 5
+# Query range configuration
+query_range:
+  align_queries_with_step: true
+  cache_results: true
+  results_cache:
+    cache:
+      embedded_cache:
+        enabled: true
+        max_size_mb: 100
+
 
 querier:
   max_concurrent: 4
   query_ingesters_within: 3h
 
+# Write path configuration
 distributor:
   ring:
     kvstore:
@@ -70,9 +87,13 @@ ingester:
   chunk_encoding: snappy
   chunk_idle_period: 5m
   chunk_retain_period: 30s
+  max_chunk_age: 1h
+  chunk_target_size: 1572864
   wal:
     dir: /loki/wal
+    enabled: true
 
+# Backend services
 ruler:
   storage:
     type: s3
@@ -93,6 +114,7 @@ compactor:
   working_directory: /tmp/compactor
   retention_enabled: true
   delete_request_store: s3
+  compaction_interval: 10m
 
 index_gateway:
   mode: ring
@@ -104,6 +126,7 @@ storage_config:
   tsdb_shipper:
     active_index_directory: /loki/tsdb-index
     cache_location: /loki/tsdb-cache
+    cache_ttl: 24h
 
 limits_config:
   reject_old_samples: true
@@ -115,3 +138,7 @@ limits_config:
   max_cache_freshness_per_query: 10m
   split_queries_by_interval: 24h
   max_query_parallelism: 32
+  max_query_length: 12000h
+  max_query_series: 500
+  max_streams_per_user: 0
+  max_line_size: 256000
